--- a/Index.html
+++ b/Index.html
@@ -3,116 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roblox 2015 Mockup</title>
+    <title>Roblox Clone</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #c3c3c3;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        .header {
-            background-color: #333;
-            color: white;
-            padding: 15px;
-            font-size: 24px;
-        }
-        .container {
-            margin-top: 50px;
-            background: white;
-            padding: 20px;
-            width: 300px;
-            margin-left: auto;
-            margin-right: auto;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-        input, select {
-            width: 90%;
-            padding: 10px;
-            margin: 5px 0;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-        }
-        .button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px;
-            width: 100%;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-        .button:hover {
-            background-color: #45a049;
-        }
-        .robux-display {
-            margin-top: 20px;
-            font-size: 18px;
-            color: green;
-        }
+        body { font-family: Arial, sans-serif; text-align: center; }
+        #home, #avatar, #marketplace { display: none; }
     </style>
 </head>
 <body>
-    <div class="header">Roblox 2015</div>
-    <div class="container">
-        <h2>Login / Sign Up</h2>
-        <input type="text" placeholder="Username" id="username">
-        <input type="password" placeholder="Password" id="password">
-        <button class="button" onclick="register()">Create Account</button>
-        <div class="robux-display" id="robuxDisplay"></div>
-        <h3>Avatar</h3>
-        <select id="avatarSelect">
-            <option value="default">Default Avatar</option>
-            <option value="cool">Cool Outfit</option>
-            <option value="classic">Classic Look</option>
-        </select>
-        <button class="button" onclick="updateAvatar()">Change Avatar</button>
-        <h3>Search Users</h3>
-        <input type="text" id="searchUser" placeholder="Enter username">
-        <button class="button" onclick="searchUser()">Search</button>
-        <div id="searchResult"></div>
+    <div id="signup">
+        <h1>Sign Up</h1>
+        <input type="text" id="username" placeholder="Username"><br>
+        <input type="password" id="password" placeholder="Password"><br>
+        <button onclick="signup()">Sign Up</button>
     </div>
+
+    <div id="home">
+        <h1>Welcome, <span id="displayUser"></span></h1>
+        <p>Robux: <span id="robux">999B+</span></p>
+        <button onclick="goTo('avatar')">Avatar</button>
+        <button onclick="goTo('marketplace')">Marketplace</button>
+        <button onclick="logout()">Logout</button>
+    </div>
+
+    <div id="avatar">
+        <h1>Avatar Editor</h1>
+        <button onclick="goTo('home')">Back</button>
+    </div>
+
+    <div id="marketplace">
+        <h1>Marketplace</h1>
+        <button onclick="goTo('home')">Back</button>
+    </div>
+
     <script>
-        function register() {
-            let username = document.getElementById("username").value;
-            if (username) {
-                localStorage.setItem("username", username);
-                localStorage.setItem("robux", 1000000000000);
-                localStorage.setItem("avatar", "default");
-                updateUI();
-            } else {
-                alert("Please enter a username.");
+        function signup() {
+            let username = document.getElementById('username').value;
+            let password = document.getElementById('password').value;
+            if (username && password) {
+                localStorage.setItem('user', JSON.stringify({ username, password, robux: '999B+' }));
+                login(username);
             }
         }
 
-        function updateUI() {
-            let username = localStorage.getItem("username");
-            let robux = localStorage.getItem("robux");
-            if (username) {
-                document.getElementById("robuxDisplay").innerHTML = 
-                    "Welcome, " + username + "! You have <b>" + robux + "</b> Robux.";
-            }
+        function login(username) {
+            document.getElementById('displayUser').innerText = username;
+            document.getElementById('signup').style.display = 'none';
+            document.getElementById('home').style.display = 'block';
         }
 
-        function updateAvatar() {
-            let avatar = document.getElementById("avatarSelect").value;
-            localStorage.setItem("avatar", avatar);
-            alert("Avatar updated to " + avatar);
+        function logout() {
+            document.getElementById('signup').style.display = 'block';
+            document.getElementById('home').style.display = 'none';
         }
 
-        function searchUser() {
-            let searchQuery = document.getElementById("searchUser").value;
-            let storedUser = localStorage.getItem("username");
-            if (searchQuery && searchQuery === storedUser) {
-                document.getElementById("searchResult").innerHTML = "User found: " + searchQuery;
-            } else {
-                document.getElementById("searchResult").innerHTML = "User not found.";
-            }
+        function goTo(page) {
+            document.getElementById('home').style.display = 'none';
+            document.getElementById('avatar').style.display = 'none';
+            document.getElementById('marketplace').style.display = 'none';
+            document.getElementById(page).style.display = 'block';
         }
 
-        window.onload = updateUI;
+        window.onload = function() {
+            let user = JSON.parse(localStorage.getItem('user'));
+            if (user) login(user.username);
+        }
     </script>
 </body>
 </html>
